[package]
name = "rust-template"
version = "0.1.0"
authors = ["noisemachines <thomas@noisemachines.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.15"
midir = "0.7.0"
fs_extra = "1.2.0"
chrono = "0.4"
nanorand = "0.5.2"
state = "0.4.2"

[profile.release]
debug = false
incremental = true